# adbc-iceberg

./: .gitignore  README.md  benchmark.py  docker-compose.polaris.yml  docker-compose.yml  example.py  partition.go  pixi.toml  reader.go  seed.py  seed_large.py  seed_polaris.py  seed_xlarge.py  statement.go
go/: DESIGN.md  connection.go  database.go  driver.go  go.mod  go.sum  options.go
go/sqlparser/: parser.go
polaris/: Cargo.toml  README.md
polaris/src/: auth.rs  delta_reader.rs  lib.rs  polaris_api.rs  s3_config.rs
rust/: Cargo.toml
rust/examples/: direct_scan.rs  raw_read.rs
rust/src/: lib.rs  sqlparser.rs
sqlparser/: ast.go  lexer.go  parser_test.go
