[package]
name = "adbc-driver-polaris"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# ADBC core
adbc_core = "0.22.0"
adbc_ffi = "0.22.0"
driverbase = { git = "https://github.com/adbc-drivers/driverbase-rs.git" }

# Arrow / Parquet
arrow-array = "57"
arrow-schema = "57"
parquet = { version = "55", features = ["async", "object_store"] }

# Iceberg (for Iceberg tables via Polaris REST catalog)
iceberg = "0.9"
iceberg-catalog-rest = "0.9"
iceberg-storage-opendal = "0.9"
opendal = { version = "0.55", features = ["services-s3"] }
object_store = { version = "0.12", features = ["aws"] }

# Delta (for Delta/generic tables)
delta_kernel = { version = "0.20", features = ["arrow-57", "default-engine-rustls", "object_store"] }
url = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"

# HTTP / Auth / Serialization
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
