[package]
name = "adbc-driver-iceberg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
adbc_core = "0.22.0"
adbc_ffi = "0.22.0"
driverbase = { git = "https://github.com/adbc-drivers/driverbase-rs.git" }
arrow-array = "57"
arrow-schema = "57"
iceberg = "0.9"
iceberg-catalog-rest = "0.9"
iceberg-storage-opendal = "0.9"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opendal = { version = "0.55", features = ["services-s3"] }
object_store = { version = "0.12", features = ["aws"] }
parquet = { version = "55", features = ["async", "object_store"] }
bytes = "1"
